tests/single_instruction_translation_validation/mcsema/register-variants/idivq_r64/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:195:35: error: use of undefined value '@__remill_error'
  %26 = tail call %struct.Memory* @__remill_error(%struct.State* nonnull dereferenceable(3376) %1, i64 %25, %struct.Memory* %0) #21
                                  ^
0.01user 0.02system 0:00.03elapsed 110%CPU (0avgtext+0avgdata 27416maxresident)k
0inputs+16outputs (0major+3244minor)pagefaults 0swaps
